--- a/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
@@ -343,106 +343,7 @@
 
                 @if (mostrarPendientes == true)
                 {
-                    <div class="perfil" style="display: flex; justify-content: space-between; padding: 20px; border: 1px solid var(--fondoBoton); flex-direction: row;">
-                        <div style="min-width: 300px; margin: -10px 0px;">
-                            @foreach (var pendiente in pendientes)
-                            {
-                                if (pendiente.Pendientes.Count > 0)
-                                {
-                                    <button @onclick="@(e => ClickearTiendaPendientes(e, pendiente.Tienda.Id, pendiente.Tienda.Nombre))" class="boton-pequeño" style="margin: 10px 0px; display: block;">
-                                        <img src="@pendiente.Tienda.ImagenIcono" style="margin: 0px 8px; height: 16px; width: 16px;" /> @pendiente.Tienda.Nombre (@pendiente.Pendientes.Count)
-                                    </button>
-                                }
-                            }
-                        </div>
-
-                        <div style="width: 100%; padding-left: 50px;">
-                            <div style="margin-bottom: 20px;">
-                                Tienda: @tiendaElegidaPendiente
-                            </div>
-
-                            <div style="display: flex; justify-content: space-between;">
-                                <div style="width: 30%;">
-                                    <a href="@enlacePendiente" target="_blank" style="text-decoration: none;"><img src="@imagenPendiente" style="width: 100%;" /></a>
-                                </div>
-
-                                <div style="width: 70%; margin-left: 20px;">
-                                    <div style="margin-bottom: 20px;">
-                                        <a href="@enlacePendiente" target="_blank" style="text-decoration: none;">@nombrePendiente</a>
-                                    </div>
-
-                                    <div>
-                                        <textarea @oninput="TextoCambiaPendientes" class="entrada-texto" style="margin: 10px 0px; width: 100%;" value="@idsPendiente" rows="1" />
-                                    </div>
-
-                                    <div style="display: flex; align-items: center; margin: 20px 0px;">
-                                        <div>
-                                            <button @onclick="@(e => ClickearDescartarPendientes(e, @enlacePendiente))" class="boton-pequeño" style="width: 130px; text-align: center;">Descartar</button>
-                                        </div>
-
-                                        <div>
-                                            <button @onclick="@(e => ClickearBuscarPendientes(e, @nombrePendiente))" class="boton-pequeño" style="margin-left: 20px; width: 130px; text-align: center;">Buscar</button>
-                                        </div>
-
-                                        <div>
-                                            <button @onclick="@(e => ClickearActualizarPendientes(e, @enlacePendiente))" class="boton-pequeño" style="margin-left: 20px; width: 130px; text-align: center;">Actualizar</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div style="margin-top: 40px;">
-                                <input type="text" @oninput="TextoCambiarBuscadorPendientes" class="entrada-texto" />
-
-                                @if (juegosBuscadorPendientes != null)
-                                {
-                                    @if (juegosBuscadorPendientes.Count > 0)
-                                    {
-                                        <div>
-                                            @foreach (var juego in juegosBuscadorPendientes)
-                                            {
-                                                <hr />
-
-                                                <div class="perfil-flexible-centrado" style="flex-wrap: wrap;">
-                                                    <div style="width: 150px; min-width: 150px;">
-                                                        <button @onclick="@(e => ClickearIdPendientes(e, @juego.Id.ToString()))" class="boton-pequeño" style="text-align: center; height: 65px;">
-                                                            Añadir ID
-
-                                                            <div style="font-size: 13px; margin-top: 5px;">
-                                                                @juego.Id
-                                                            </div>
-                                                        </button>
-                                                    </div>
-
-                                                    <div style="padding-left: 15px;">
-                                                        <a href="/game/@juego.Id.ToString()" target="_blank">
-                                                            <img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 112px;" />
-                                                        </a>
-                                                    </div>
-
-                                                    <div style="width: 100%; padding: 5px 10px; flex: 1;">
-                                                        @juego.Nombre
-                                                    </div>
-
-                                                    <div class="admin-busqueda-juego-derecha">
-                                                        <button @onclick="@(e => ClickearBorrarPendientes(e, @juego.Id.ToString()))" class="boton-pequeño-peligro">Borrar</button>
-                                                    </div>
-                                                </div>
-                                            }
-                                        </div>
-                                    }
-                                    else
-                                    {
-                                        <label style="margin-top: 20px; margin-left: 10px;">No hay resultados</label>
-                                    }
-                                }
-                                else
-                                {
-                                    <label style="margin-top: 20px; margin-left: 10px;">No hay resultados</label>
-                                }
-                            </div>
-                        </div>
-                    </div>
+                    <Pendientes/>
                 }
 
                 @if (mostrarAñadir == true)
@@ -1271,7 +1172,7 @@
     [Inject]
     protected Herramientas.IDecompiladores decompilador { get; set; }
 
-    SqlConnection conexion = new SqlConnection();
+    private SqlConnection conexion = new SqlConnection();
 
     private string titulo = string.Empty;
 
@@ -1766,7 +1667,6 @@
 
     private bool mostrarPendientes = false;
 
-    List<PendientesTienda> pendientes = new List<PendientesTienda>();
     private int nuevosPendientesCantidad = 0;
     private string nuevosPendientesMensaje = string.Empty;
 
@@ -1799,210 +1699,7 @@
                 conexion = Herramientas.BaseDatos.Conectar();
             }
 
-            pendientes.Clear();
-
-            foreach (var tienda in Tiendas2.TiendasCargar.GenerarListado())
-            {
-                if (tienda.Id != "steam")
-                {
-                    PendientesTienda pendienteTienda = new PendientesTienda();
-                    pendienteTienda.Tienda = tienda;
-                    pendienteTienda.Pendientes = BaseDatos.Pendientes.Buscar.Tienda(tienda.Id, conexion);
-
-                    if (pendienteTienda.Pendientes.Count > 0)
-                    {
-                        pendientes.Add(pendienteTienda);
-                    }
-                }
-            }
-
             ActualizarMensajePendientes(BaseDatos.Pendientes.Buscar.Todos(conexion).Count);
-        }
-    }
-
-    private string idTiendaPendiente = null;
-    private string imagenPendiente = null;
-    private string nombrePendiente = null;
-    private string enlacePendiente = null;
-    private string idsPendiente = "0";
-    private string cadenaBusquedaPendiente = null;
-    private string tiendaElegidaPendiente = null;
-
-    private void ClickearTiendaPendientes(MouseEventArgs e, string id, string nombre)
-    {
-        idTiendaPendiente = id;
-        tiendaElegidaPendiente = nombre;
-
-        ClickearTiendaPendientes(idTiendaPendiente);
-    }
-
-    private void ClickearTiendaPendientes(string id)
-    {
-        if (string.IsNullOrEmpty(id) == false)
-        {
-            if (conexion.State != System.Data.ConnectionState.Open)
-            {
-                conexion = Herramientas.BaseDatos.Conectar();
-            }
-
-            using (conexion)
-            {
-                BaseDatos.Pendientes.Pendiente juego = BaseDatos.Pendientes.Buscar.PrimerJuego(id, conexion);
-
-                if (juego != null)
-                {
-                    nombrePendiente = juego.nombre;
-
-                    string imagen = juego.imagen;
-
-                    if (imagen != null)
-                    {
-                        imagen = imagen.Replace("&amp;", "&");
-                    }
-
-                    imagenPendiente = imagen;
-
-                    enlacePendiente = juego.enlace;
-
-                    idsPendiente = BaseDatos.Pendientes.Buscar.Nombre(nombrePendiente, conexion);
-                }
-            }
-        }
-    }
-
-    private void ClickearDescartarPendientes(MouseEventArgs e, string enlace)
-    {
-        if (conexion.State != System.Data.ConnectionState.Open)
-        {
-            conexion = Herramientas.BaseDatos.Conectar();
-        }
-
-        using (conexion)
-        {
-            BaseDatos.Pendientes.Actualizar.Descartar(idTiendaPendiente, enlace, conexion);
-
-            foreach (var pendiente in pendientes)
-            {
-                if (pendiente.Tienda.Id == idTiendaPendiente)
-                {
-                    pendiente.Pendientes = BaseDatos.Pendientes.Buscar.Tienda(idTiendaPendiente, conexion);
-                }
-            }
-
-            ClickearTiendaPendientes(idTiendaPendiente);
-        }
-    }
-
-    private void ClickearBuscarPendientes(MouseEventArgs e, string nombre)
-    {
-        if (conexion.State != System.Data.ConnectionState.Open)
-        {
-            conexion = Herramientas.BaseDatos.Conectar();
-        }
-
-        using (conexion)
-        {
-            idsPendiente = BaseDatos.Pendientes.Buscar.Nombre(nombre, conexion);
-        }
-    }
-
-    private void ClickearActualizarPendientes(MouseEventArgs e, string enlace)
-    {
-        if (conexion.State != System.Data.ConnectionState.Open)
-        {
-            conexion = Herramientas.BaseDatos.Conectar();
-        }
-
-        using (conexion)
-        {
-            BaseDatos.Pendientes.Actualizar.Juego(idTiendaPendiente, enlace, idsPendiente, conexion);
-
-            foreach (var pendiente in pendientes)
-            {
-                if (pendiente.Tienda.Id == idTiendaPendiente)
-                {
-                    pendiente.Pendientes = BaseDatos.Pendientes.Buscar.Tienda(idTiendaPendiente, conexion);
-                }
-            }
-
-            ClickearTiendaPendientes(idTiendaPendiente);
-        }
-    }
-
-    private void TextoCambiaPendientes(ChangeEventArgs texto)
-    {
-        idsPendiente = texto.Value.ToString();
-    }
-
-    //--------------------------------------------------------------------------------------------
-
-    List<Juegos.Juego> juegosBuscadorPendientes = new List<Juegos.Juego>();
-
-    private void TextoCambiarBuscadorPendientes(ChangeEventArgs texto)
-    {
-        if (conexion.State != System.Data.ConnectionState.Open)
-        {
-            conexion = Herramientas.BaseDatos.Conectar();
-        }
-
-        using (conexion)
-        {
-            if (texto.Value.ToString().Trim().Length > 2)
-            {
-                cadenaBusquedaPendiente = texto.Value.ToString().Trim();
-                juegosBuscadorPendientes = BaseDatos.Juegos.Buscar.Nombre(cadenaBusquedaPendiente, conexion, 250);
-            }
-            else
-            {
-                juegosBuscadorPendientes = new List<Juegos.Juego>();
-            }
-        }
-    }
-
-    private void ClickearIdPendientes(MouseEventArgs e, string id)
-    {
-        if (string.IsNullOrEmpty(idsPendiente) == true)
-        {
-            idsPendiente = id;
-        }
-        else
-        {
-            if (idsPendiente != "0")
-            {
-                if (idsPendiente.Contains(",") == false)
-                {
-                    if (idsPendiente.Contains(id) == false)
-                    {
-                        idsPendiente = idsPendiente + "," + id;
-                    }
-                }
-                else
-                {
-                    if (idsPendiente.Contains(id + ",") == false)
-                    {
-                        idsPendiente = idsPendiente + "," + id;
-                    }
-                }
-            }
-            else
-            {
-                idsPendiente = id;
-            }
-        }
-    }
-
-    private void ClickearBorrarPendientes(MouseEventArgs e, string id)
-    {
-        if (conexion.State != System.Data.ConnectionState.Open)
-        {
-            conexion = Herramientas.BaseDatos.Conectar();
-        }
-
-        using (conexion)
-        {
-            BaseDatos.Juegos.Borrar.Ejecutar(id, conexion);
-
-            juegosBuscadorPendientes = BaseDatos.Juegos.Buscar.Nombre(cadenaBusquedaPendiente, conexion, 250);
         }
     }
 
