--- a/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
@@ -1,4 +1,4 @@
-﻿<div class="perfil" style="padding: 20px; border: 1px solid var(--fondoBoton);">
+﻿<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
     <div>
         Visitas - pepeizqdeals.com
     </div>
@@ -22,7 +22,7 @@
     </div>
 </div>
 
-<div class="perfil" style="padding: 20px; border: 1px solid var(--fondoBoton); margin-top: 40px;">
+<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; margin-top: 20px;">
     <div>
         Visitas - pepeizqapps.com
     </div>
