--- a/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
@@ -36,15 +36,15 @@
 
                 <div style="display: flex; align-items: center; margin: 20px 0px;">
                     <div>
-                        <button @onclick="@(e => ClickearDescartarPendientes(e, @enlacePendiente))" class="boton-pequeño" style="width: 130px; text-align: center;">Descartar</button>
+                        <button @onclick="@(e => ClickearDescartarPendientes(e, enlacePendiente))" class="boton-pequeño" style="width: 130px; text-align: center;">Descartar</button>
                     </div>
 
                     <div>
-                        <button @onclick="@(e => ClickearBuscarPendientes(e, @nombrePendiente))" class="boton-pequeño" style="margin-left: 20px; width: 130px; text-align: center;">Buscar</button>
+                        <button @onclick="@(e => ClickearBuscarPendientes(e, nombrePendiente))" class="boton-pequeño" style="margin-left: 20px; width: 130px; text-align: center;">Buscar</button>
                     </div>
 
                     <div>
-                        <button @onclick="@(e => ClickearActualizarPendientes(e, @enlacePendiente))" class="boton-pequeño" style="margin-left: 20px; width: 130px; text-align: center;">Actualizar</button>
+                        <button @onclick="@(e => ClickearActualizarPendientes(e, enlacePendiente))" class="boton-pequeño" style="margin-left: 20px; width: 130px; text-align: center;">Actualizar</button>
                     </div>
                 </div>
             </div>
@@ -53,52 +53,184 @@
         <div style="margin-top: 40px;">
             <input type="text" @oninput="TextoCambiarBuscadorPendientes" class="entrada-texto" />
 
-            @if (juegosBuscadorPendientes != null)
+            <div style="display: flex; align-items: center; margin: 20px 0px;">
+                <button @onclick="@(e => CambiarPestañas(e, 0))" class="boton-pequeño" style="width: 130px; text-align: center;">Juegos (@buscadorPendientesJuegos.Count.ToString())</button>
+
+                <button @onclick="@(e => CambiarPestañas(e, 1))" class="boton-pequeño" style="margin-left: 20px; width: 130px; text-align: center;">DLCs (@buscadorPendientesDLCs.Count.ToString())</button>
+
+                <button @onclick="@(e => CambiarPestañas(e, 2))" class="boton-pequeño" style="margin-left: 20px; width: 180px; text-align: center;">Bandas Sonoras (@buscadorPendientesBandasSonoras.Count.ToString())</button>
+
+                <button @onclick="@(e => CambiarPestañas(e, 3))" class="boton-pequeño" style="margin-left: 20px; width: 130px; text-align: center;">Software (@buscadorPendientesSoftware.Count.ToString())</button>
+            </div>
+
+            @if (pestañaJuegos == true)
             {
-                @if (juegosBuscadorPendientes.Count > 0)
+                if (buscadorPendientesJuegos != null)
                 {
-                    <div>
-                        @foreach (var juego in juegosBuscadorPendientes)
-                        {
-                            <hr />
+                    if (buscadorPendientesJuegos.Count > 0)
+                    {
+                        <div>
+                            @foreach (var juego in buscadorPendientesJuegos)
+                            {
+                                <hr />
 
-                            <div class="perfil-flexible-centrado" style="flex-wrap: wrap;">
-                                <div style="width: 150px; min-width: 150px;">
-                                    <button @onclick="@(e => ClickearIdPendientes(e, @juego.Id.ToString()))" class="boton-pequeño" style="text-align: center;">
-                                        Añadir ID
+                                <div class="perfil-flexible-centrado" style="flex-wrap: wrap;">
+                                    <div style="width: 150px; min-width: 150px;">
+                                        <button @onclick="@(e => ClickearIdPendientes(e, juego.Id.ToString()))" class="boton-pequeño" style="text-align: center;">
+                                            Añadir ID
 
-                                        <div style="font-size: 13px;">
-                                            @juego.Id
-                                        </div>
-                                    </button>
+                                            <div style="font-size: 13px;">
+                                                @juego.Id
+                                            </div>
+                                        </button>
+                                    </div>
+
+                                    <div style="padding-left: 15px;">
+                                        <a href="/game/@juego.Id.ToString()" target="_blank">
+                                            <img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 112px;" />
+                                        </a>
+                                    </div>
+
+                                    <div style="width: 100%; padding: 5px 10px; flex: 1;">
+                                        @juego.Nombre
+                                    </div>
+
+                                    <div class="admin-busqueda-juego-derecha">
+                                        <button @onclick="@(e => ClickearBorrarPendientes(e, juego.Id.ToString()))" class="boton-pequeño-peligro">Borrar</button>
+                                    </div>
                                 </div>
-
-                                <div style="padding-left: 15px;">
-                                    <a href="/game/@juego.Id.ToString()" target="_blank">
-                                        <img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 112px;" />
-                                    </a>
-                                </div>
-
-                                <div style="width: 100%; padding: 5px 10px; flex: 1;">
-                                    @juego.Nombre
-                                </div>
-
-                                <div class="admin-busqueda-juego-derecha">
-                                    <button @onclick="@(e => ClickearBorrarPendientes(e, @juego.Id.ToString()))" class="boton-pequeño-peligro">Borrar</button>
-                                </div>
-                            </div>
-                        }
-                    </div>
-                }
-                else
-                {
-                    <label style="margin-top: 20px; margin-left: 10px;">No hay resultados</label>
+                            }
+                        </div>
+                    }
                 }
             }
-            else
+
+            @if (pestañaDLCs == true)
             {
-                <label style="margin-top: 20px; margin-left: 10px;">No hay resultados</label>
+                if (buscadorPendientesDLCs != null)
+                {
+                    if (buscadorPendientesDLCs.Count > 0)
+                    {
+                        <div>
+                            @foreach (var dlc in buscadorPendientesDLCs)
+                            {
+                                <hr />
+
+                                <div class="perfil-flexible-centrado" style="flex-wrap: wrap;">
+                                    <div style="width: 150px; min-width: 150px;">
+                                        <button @onclick="@(e => ClickearIdPendientes(e, dlc.Id.ToString()))" class="boton-pequeño" style="text-align: center;">
+                                            Añadir ID
+
+                                            <div style="font-size: 13px;">
+                                                @dlc.Id
+                                            </div>
+                                        </button>
+                                    </div>
+
+                                    <div style="padding-left: 15px;">
+                                        <a href="/game/@dlc.Id.ToString()" target="_blank">
+                                            <img src="@dlc.Imagenes.Header_460x215" style="width: 230px; height: 112px;" />
+                                        </a>
+                                    </div>
+
+                                    <div style="width: 100%; padding: 5px 10px; flex: 1;">
+                                        @dlc.Nombre
+                                    </div>
+
+                                    <div class="admin-busqueda-juego-derecha">
+                                        <button @onclick="@(e => ClickearBorrarPendientes(e, dlc.Id.ToString()))" class="boton-pequeño-peligro">Borrar</button>
+                                    </div>
+                                </div>
+                            }
+                        </div>
+                    }
+                }
             }
+
+            @if (pestañaBandasSonoras == true)
+            {
+                if (buscadorPendientesBandasSonoras != null)
+                {
+                    if (buscadorPendientesBandasSonoras.Count > 0)
+                    {
+                        <div>
+                            @foreach (var bandaSonora in buscadorPendientesBandasSonoras)
+                            {
+                                <hr />
+
+                                <div class="perfil-flexible-centrado" style="flex-wrap: wrap;">
+                                    <div style="width: 150px; min-width: 150px;">
+                                        <button @onclick="@(e => ClickearIdPendientes(e, bandaSonora.Id.ToString()))" class="boton-pequeño" style="text-align: center;">
+                                            Añadir ID
+
+                                            <div style="font-size: 13px;">
+                                                @bandaSonora.Id
+                                            </div>
+                                        </button>
+                                    </div>
+
+                                    <div style="padding-left: 15px;">
+                                        <a href="/game/@bandaSonora.Id.ToString()" target="_blank">
+                                            <img src="@bandaSonora.Imagenes.Header_460x215" style="width: 230px; height: 112px;" />
+                                        </a>
+                                    </div>
+
+                                    <div style="width: 100%; padding: 5px 10px; flex: 1;">
+                                        @bandaSonora.Nombre
+                                    </div>
+
+                                    <div class="admin-busqueda-juego-derecha">
+                                        <button @onclick="@(e => ClickearBorrarPendientes(e, bandaSonora.Id.ToString()))" class="boton-pequeño-peligro">Borrar</button>
+                                    </div>
+                                </div>
+                            }
+                        </div>
+                    }
+                }
+            }
+
+            @if (pestañaSoftware == true)
+            {
+                if (buscadorPendientesSoftware != null)
+                {
+                    if (buscadorPendientesSoftware.Count > 0)
+                    {
+                        <div>
+                            @foreach (var software in buscadorPendientesSoftware)
+                            {
+                                <hr />
+
+                                <div class="perfil-flexible-centrado" style="flex-wrap: wrap;">
+                                    <div style="width: 150px; min-width: 150px;">
+                                        <button @onclick="@(e => ClickearIdPendientes(e, software.Id.ToString()))" class="boton-pequeño" style="text-align: center;">
+                                            Añadir ID
+
+                                            <div style="font-size: 13px;">
+                                                @software.Id
+                                            </div>
+                                        </button>
+                                    </div>
+
+                                    <div style="padding-left: 15px;">
+                                        <a href="/game/@software.Id.ToString()" target="_blank">
+                                            <img src="@software.Imagenes.Header_460x215" style="width: 230px; height: 112px;" />
+                                        </a>
+                                    </div>
+
+                                    <div style="width: 100%; padding: 5px 10px; flex: 1;">
+                                        @software.Nombre
+                                    </div>
+
+                                    <div class="admin-busqueda-juego-derecha">
+                                        <button @onclick="@(e => ClickearBorrarPendientes(e, software.Id.ToString()))" class="boton-pequeño-peligro">Borrar</button>
+                                    </div>
+                                </div>
+                            }
+                        </div>
+                    }
+                }
+            }
+
         </div>
     </div>
 </div>
@@ -143,7 +275,7 @@
             }
         }
     }
-    
+
     private void ClickearTiendaPendientes(MouseEventArgs e, string id, string nombre)
     {
         idTiendaPendiente = id;
@@ -252,7 +384,40 @@
 
     //--------------------------------------------------------------------------------------------
 
-    List<Juegos.Juego> juegosBuscadorPendientes = new List<Juegos.Juego>();
+    private bool pestañaJuegos = true;
+    private bool pestañaDLCs = false;
+    private bool pestañaBandasSonoras = false;
+    private bool pestañaSoftware = false;
+
+    private void CambiarPestañas(MouseEventArgs e, int id)
+    {
+        pestañaJuegos = false;
+        pestañaDLCs = false;
+        pestañaBandasSonoras = false;
+        pestañaSoftware = false;
+
+        if (id == 0)
+        {
+            pestañaJuegos = true;
+        }
+        else if (id == 1)
+        {
+            pestañaDLCs = true;
+        }
+        else if (id == 2)
+        {
+            pestañaBandasSonoras = true;
+        }
+        else if (id == 3)
+        {
+            pestañaSoftware = true;
+        }
+    }
+
+    private List<Juegos.Juego> buscadorPendientesJuegos = new List<Juegos.Juego>();
+    private List<Juegos.Juego> buscadorPendientesDLCs = new List<Juegos.Juego>();
+    private List<Juegos.Juego> buscadorPendientesBandasSonoras = new List<Juegos.Juego>();
+    private List<Juegos.Juego> buscadorPendientesSoftware = new List<Juegos.Juego>();
 
     private void TextoCambiarBuscadorPendientes(ChangeEventArgs texto)
     {
@@ -266,11 +431,74 @@
             if (texto.Value.ToString().Trim().Length > 2)
             {
                 cadenaBusquedaPendiente = texto.Value.ToString().Trim();
-                juegosBuscadorPendientes = BaseDatos.Juegos.Buscar.Nombre(cadenaBusquedaPendiente, conexion, 250);
+
+                List<Juegos.Juego> resultados = BaseDatos.Juegos.Buscar.Nombre(cadenaBusquedaPendiente, conexion, 250);
+
+                if (resultados.Count > 0)
+                {
+                    buscadorPendientesJuegos.Clear();
+                    buscadorPendientesDLCs.Clear();
+                    buscadorPendientesBandasSonoras.Clear();
+                    buscadorPendientesSoftware.Clear();
+
+                    foreach (var resultado in resultados)
+                    {
+                        if (resultado.Tipo == Juegos.JuegoTipo.Game)
+                        {
+                            buscadorPendientesJuegos.Add(resultado);
+                        }
+                        else if (resultado.Tipo == Juegos.JuegoTipo.DLC)
+                        {
+                            buscadorPendientesDLCs.Add(resultado);
+                        }
+                        else if (resultado.Tipo == Juegos.JuegoTipo.Music)
+                        {
+                            buscadorPendientesBandasSonoras.Add(resultado);
+                        }
+                        else if (resultado.Tipo == Juegos.JuegoTipo.Software)
+                        {
+                            buscadorPendientesSoftware.Add(resultado);
+                        }
+                    }
+
+                    pestañaJuegos = false;
+                    pestañaDLCs = false;
+                    pestañaBandasSonoras = false;
+                    pestañaSoftware = false;
+
+                    if (buscadorPendientesJuegos.Count > 0)
+                    {
+                        pestañaJuegos = true;
+                    }
+                    else if (buscadorPendientesJuegos.Count == 0)
+                    {
+                        if (buscadorPendientesDLCs.Count > 0)
+                        {
+                            pestañaDLCs = true;
+                        }
+                        else if (buscadorPendientesDLCs.Count == 0)
+                        {
+                            if (buscadorPendientesBandasSonoras.Count > 0)
+                            {
+                                pestañaBandasSonoras = true;
+                            }
+                            else if (buscadorPendientesBandasSonoras.Count == 0)
+                            {
+                                if (buscadorPendientesSoftware.Count > 0)
+                                {
+                                    pestañaSoftware = true;
+                                }
+                            }
+                        }
+                    }
+                }              
             }
             else
             {
-                juegosBuscadorPendientes = new List<Juegos.Juego>();
+                buscadorPendientesJuegos = new List<Juegos.Juego>();
+                buscadorPendientesDLCs = new List<Juegos.Juego>();
+                buscadorPendientesBandasSonoras = new List<Juegos.Juego>();
+                buscadorPendientesSoftware = new List<Juegos.Juego>();
             }
         }
     }
@@ -318,7 +546,7 @@
         {
             BaseDatos.Juegos.Borrar.Ejecutar(id, conexion);
 
-            juegosBuscadorPendientes = BaseDatos.Juegos.Buscar.Nombre(cadenaBusquedaPendiente, conexion, 250);
+            buscadorPendientesJuegos = BaseDatos.Juegos.Buscar.Nombre(cadenaBusquedaPendiente, conexion, 250);
         }
     }
 }
