--- a/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
@@ -1,6 +1,6 @@
 ﻿<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
     <div>
-        Visitas - pepeizqdeals.com
+        pepeizqdeals.com
     </div>
 
     <div style="display: flex; align-items: center; margin-top: 20px;">
@@ -24,7 +24,7 @@
 
 <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; margin-top: 20px;">
     <div>
-        Visitas - pepeizqapps.com
+        pepeizqapps.com
     </div>
 
     <div style="display: flex; align-items: center; margin-top: 20px;">
@@ -46,7 +46,7 @@
     </div>
 </div>
 
-<div class="perfil" style="padding: 20px; border: 1px solid var(--fondoBoton); margin-top: 40px;">
+<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; margin-top: 20px;">
     <div>
         Correo
     </div>
@@ -84,7 +84,7 @@
     </div>
 </div>
 
-<div class="perfil" style="padding: 20px; border: 1px solid var(--fondoBoton); margin-top: 40px;">
+<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; margin-top: 20px;">
     <div>
         Afiliados
     </div>
